<resources>
    <string name="app_name">myTime</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="open" />
    <string name="close" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_description"><u>Personal Info</u></string>
    <string name="weight_label">Weight:</string>
    <string name="moods_label">Moods:</string>
    <string name="symptoms_label">Symptoms:</string>
    <string name="moods_hint">Moods</string>
    <string name="weight_hint">Weight</string>
    <string name="symptoms_hint">Symptoms</string>
    <string name="upcoming_appointments_label">Upcoming Appointments</string>
    <string name="appointments_label">Appointments</string>
    <string name="add_button">Add Button</string>


    <string-array name="moods_array">
        <item>Happy</item>
        <item>Neutral</item>
        <item>Sad</item>
    </string-array>

    <string-array name="list">
        <item>Choice one</item>
        <item>Choice two</item>
        <item>Choice three</item>
    </string-array>

</resources>
